--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner">
-  <%= image_tag('home-hero', alt: 'Home Hero', class:"home-hero" ) %>
+  <%= image_tag('home-hero.png', alt: 'Home Hero', class:"home-hero" ) %>
 
   <div class="hero-btn d-flex flex-column">
       <%= link_to "Quero adotar", new_user_registration_path(adopter: "true"), class: "btn btn-dark-green mb-2" %>
