imagens com extensão

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,15 +17,15 @@
   <div class="home-icon">
     <div class="row">
       <div class="col-sm text-center">
-        <%= image_tag('1', alt: 'Home Icon 1', class:"icon" ) %>
+        <%= image_tag('1.png', alt: 'Home Icon 1', class:"icon" ) %>
         <p>Se você estiver procurando um novo melhor amigo, clique no botão 'Quero adotar' e preencha seu perfil e preferências, que nós vamos achar o seu match perfeito!</p>
       </div>
       <div class="col-sm text-center">
-        <%= image_tag('2', alt: 'Home Icon 1', class:"icon" ) %>
+        <%= image_tag('2.png', alt: 'Home Icon 1', class:"icon" ) %>
         <p>Se você for uma ONG ou um protetor de animais, clique no botão 'Quero colocar para adoção' que nós vamos te ajudar a encontrar um lar cheio de amor para ele!</p>
       </div>
       <div class="col-sm text-center">
-        <%= image_tag('3', alt: 'Home Icon 1', class:"icon" ) %>
+        <%= image_tag('3.png', alt: 'Home Icon 1', class:"icon" ) %>
         <p>Vocês podem combinar uma data para a entrega do pet e se comunicarem pelo nosso chat. Você pode compartilhar o final feliz para incentivar mais pessoas a adotarem!</p>
       </div>
     </div>
@@ -44,7 +44,7 @@
     <div class="card me-3 ms-3">
       <div class="card-body d-flex flex-row align-content-between">
         <div class="my-auto">
-          <%= image_tag('happyend-1', alt: 'Happy End', class:"card-img" ) %>
+          <%= image_tag('happyend-1.jpg', alt: 'Happy End', class:"card-img" ) %>
         </div>
         <div class="px-3 d-flex flex-column justify-content-between">
           <div>
@@ -59,7 +59,7 @@
     <div class="card me-3 ms-3">
       <div class="card-body d-flex flex-row align-content-between">
         <div class="my-auto">
-          <%= image_tag('happyend-2', alt: 'Happy End', class:"card-img" ) %>
+          <%= image_tag('happyend-2.jpg', alt: 'Happy End', class:"card-img" ) %>
         </div>
         <div class="px-3 d-flex flex-column justify-content-between">
           <div>
@@ -74,7 +74,7 @@
     <div class="card me-3 ms-3">
       <div class="card-body d-flex flex-row align-content-between">
         <div class="my-auto">
-          <%= image_tag('happyend-3', alt: 'Happy End', class:"card-img" ) %>
+          <%= image_tag('happyend-3.jpg', alt: 'Happy End', class:"card-img" ) %>
         </div>
         <div class="px-3 d-flex flex-column justify-content-between">
           <div>
@@ -99,7 +99,7 @@
     <div class="card me-5">
         <div class="card-body d-flex flex-row align-items-center">
           <div class="my-auto">
-            <%= image_tag('why-2', alt: 'Happy End', class:"card-img" ) %>
+            <%= image_tag('why-2.png', alt: 'Happy End', class:"card-img" ) %>
           </div>
           <div class="ps-3 align-items-center">
             <p class="card-text mt-2">Adotar significa ganhar um amigo instantâneo. Muitos animais em abrigos estão sedentos por afeto, criando laços profundos e imediatos.</p>
@@ -110,7 +110,7 @@
     <div class="card me-5">
       <div class="card-body d-flex flex-row align-items-center">
           <div class="my-auto">
-            <%= image_tag('why-1', alt: 'Happy End', class:"card-img" ) %>
+            <%= image_tag('why-1.png', alt: 'Happy End', class:"card-img" ) %>
           </div>
           <div class="ps-3 align-items-center">
             <p class="card-text mt-2">A adoção é amiga do bolso. Com custos incluindo vacinas e castração, é uma opção financeiramente acessível.</p>
@@ -121,7 +121,7 @@
     <div class="card">
       <div class="card-body d-flex flex-row align-items-center">
           <div class="my-auto">
-            <%= image_tag('why-3', alt: 'Happy End', class:"card-img" ) %>
+            <%= image_tag('why-3.png', alt: 'Happy End', class:"card-img" ) %>
           </div>
           <div class="ps-3 align-items-center">
             <p class="card-text mt-2">Contribui para reduzir a superpopulação em abrigos, oferecendo a mais animais a chance de encontrar lares amorosos.</p>
