--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,6 +1,7 @@
-// * {
-//     font-family: $base-font;
-// }
+* {
+    font-family: $base-font;
+}
+
 .btn-orange {
     background-color: $orange;
     color: $dark;
