--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="profile-btn" data-action="click->show-dashboard#profile">
-            <div class="card-info">
+            <div class="title card-info">
               <h5>Profile</h5>
               <p class="description">Edite suas informações pessoais</p>
             </div>
@@ -14,7 +14,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="adoption-btn" data-action="click->show-dashboard#adoptions">
-            <div class="card-info">
+            <div class="title card-info ">
               <h5>Minhas adoções</h5>
               <p class="description">Veja os animais que deseja adotar</p>
             </div>
@@ -23,7 +23,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="animal-btn" data-action="click->show-dashboard#animals">
-            <div class="card-info">
+            <div class="title card-info">
               <h5>Meus animais favoritos</h5>
               <p class="description">Veja os seus animais favoritos</p>
             </div>
@@ -75,7 +75,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="profile-btn" data-action="click->show-dashboard#profile">
-            <div class="card-info">
+            <div class="title card-info">
               <h5>Profile</h5>
               <p class="description">Edite suas informações pessoais</p>
             </div>
@@ -84,7 +84,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="adoption-btn" data-action="click->show-dashboard#adoptions">
-            <div class="card-info">
+            <div class="title card-info">
               <h5>Interessados em adotar</h5>
               <p class="description">Veja os animais que possuem interessados</p>
             </div>
@@ -93,7 +93,7 @@
 
         <div class="col-sm dashboard-card">
           <button class="dashboard-button" id="animal-btn" data-action="click->show-dashboard#animals">
-            <div class="card-info">
+            <div class="title card-info">
               <h5>Meus animais cadastrados</h5>
               <p class="description">Veja os animais cadastrados</p>
             </div>
