--- a/app/views/matchs/show.html.erb
+++ b/app/views/matchs/show.html.erb
@@ -11,7 +11,7 @@
         <div class="card-index mx-auto my-auto">
           <div>
             <% if match[:animal].photo.attached? %>
-              <%= cl_image_tag animal.photo.key, width: 240, height: 240, crop: :fill %>
+              <%= cl_image_tag match[:animal].photo.key, width: 240, height: 240, crop: :fill %>
             <% else %>
               <%= image_tag "CRMLO.png", width: 240, height: 240 %>
             <% end %>
