--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Entrar", matchs_path(resource_name), class:"btn-dark-green-outline mb-3" %><br />
+  <%= link_to "Entrar", new_session_path(resource_name), class:"btn-dark-green-outline mb-3" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Cadastrar", matchs_path(resource_name) , class:"btn-dark-green-outline mb-3" %><br />
+  <%= link_to "Cadastrar", new_registration_path(resource_name) , class:"btn-dark-green-outline mb-3" %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
