--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,6 +39,6 @@
     </div>
 
 
-    <%= f.button :submit, "Update", class:"btn-yellow" %>
+    <%= f.button :submit, "Salvar", class:"btn-yellow" %>
     <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-dark-green' %>
   <% end %>
