--- a/app/views/adoptions/_applications.html.erb
+++ b/app/views/adoptions/_applications.html.erb
@@ -5,7 +5,7 @@
 
       <% if owner_adoptions.present? %>
         <% owner_adoptions.each do |adoption| %>
-        <%# <div class="card-contracts p-4 mx-auto"> %>
+        <%# <div class="card-contracts px-4 mx-auto"> %>
           <div class="card m-2" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
@@ -36,13 +36,13 @@
         <% end %>
 
       <% else %>
-        <div class="card-contracts p-4 w-100">
+        <div class="card-contracts px-4 w-100">
           <p class="d-flex mb-0">Você ainda tem nenhuma adoção</p>
         </div>
       <% end %>
 
     <% else %>
-      <div class="card-contracts p-4 w-100">
+      <div class="card-contracts px-4 w-100">
         <p class="mb-0">Nenhuma aplicação encontrada</p>
       </div>
   </div>
