--- a/app/views/adoptions/new.html.erb
+++ b/app/views/adoptions/new.html.erb
@@ -1,14 +1,21 @@
 <!-- Criação de adoption -->
 
 <div class="container">
-  <h2 class="text-center mt-4 mb-0">Selecione uma data</h2>
+  <div class="mb-1">
+    <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / <%= link_to "Animais para adoção", animals_path, class:"navigation" %> / <%= @animal.name %></p>
+  </div>
+  <% if @animal.gender == 'Macho' %>
+    <h2 class="title text-center mt-4 mb-0">Ficamos muito felizes que você gostaria de adotar o <%= @animal.name %>! Qual seria o dia ideal para a adoção?</h2>
+  <% elsif @animal.gender == 'Fêmea' %>
+    <h2 class="title text-center mt-4 mb-0">Ficamos muito felizes que você gostaria de adotar a <%= @animal.name %>! Qual seria o dia ideal para a adoção?</h2>
+  <% end %>
   <div class="devise-card mt-4 mb-5 mx-auto">
-    <%= simple_form_for [@user, @animal, @adoption] do |f| %>
+    <%= simple_form_for [@animal, @adoption] do |f| %>
       <%= f.input :date, as: :date, label: 'Data da adoção:', start_year: Date.today.year, end_year: Date.today.year + 1 %>
-      <%= f.button :submit, "Criar", class:"btn-yellow" %>
+      <%= f.button :submit, "Agendar", class:"btn-yellow" %>
     <% end %>
+    <%= link_to 'Voltar', animal_path(@animal), class:"btn-orange-outline" %>
   </div>
 </div>
 
 <!-- fazer botão para todos os 'matches' (index animals) -->
-<%= link_to 'Voltar aos animais', animal_path(@animal), class: 'btn btn-primary' %>
