--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -52,7 +52,7 @@
       <% end %>
 
       <% if current_user.adopter? && @adoption.status == "Aceito" %>
-        <%= link_to 'Conte-nos sua experiência', new_user_animal_adoption_testimony_path(user_id: current_user, animal_id: @adoption.animal.id, adoption_id: @adoption.id), class:'btn-yellow-outline' %>
+        <%= link_to 'Conte-nos sua experiência', new_adoption_testimony_path(@adoption), class:'btn-yellow-outline' %>
       <% end %>
 
     </div>
