--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -73,11 +73,14 @@
           <% adoptions = @animal.adoptions %>
           <% if adoptions.any? { |adoption| adoption.status == "Aceito" } %>
             <div class="bg-dark text-white d-flex justify-content-center align-items-center rounded-3 w-100 p-2">Adotado</div>
-          <% elsif current_user.adopter? %>
-            <%= link_to "Quero adotar", new_user_animal_adoption_path(user_id: current_user, animal_id: @animal.id), class: "btn-dark-green my-2 w-100" %>
           <% end %>
-        <% elsif current_user.adopter? %>
-          <%= link_to "Quero adotar", new_user_animal_adoption_path(user_id: current_user, animal_id: @animal.id), class: "btn-dark-green my-2 w-100" %>
+        <% end %>
+        <% if current_user.adopter? %>
+          <% if current_user.adoption_form.present?%>
+            <%= link_to "Quero adotar", new_animal_adoption_path(@animal), class: "btn-dark-green my-2 w-100" %>
+          <% else %>
+            <%= link_to "Quero adotar", new_adoption_form_path({target_animal_id: @animal.id}), class: "btn-dark-green my-2 w-100" %>
+          <% end %>
         <% end %>
       </div>
     </div>
