--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
  <div class="container">
   <h2 class="title text-center mt-4 mb-0">Cadastre-se</h2>
   <div class="devise-card mt-4 mb-5 mx-auto">
-    <%= simple_form_for @user , data: { controller: "tab" } do |f| %>
+    <%= simple_form_for @user, url: :user_registration , data: { controller: "tab" } do |f| %>
       <div class="tab-content">
         <div class="tab-pane active" id="dados">
 
