--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,8 +33,8 @@
                  <% end %>
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
-                  <%= link_to "Editar preferências", edit_adoption_form_path(current_user), class: "dropdown-item" %>
+                  <%= link_to "Editar Perfil", edit_user_path, class: "dropdown-item" %>
+                  <%= link_to "Editar preferências", edit_adoption_form_path(current_user), class: "dropdown-item" if current_user.adoption_form.present? %>
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
               </li>
