--- a/app/views/testimonies/new.html.erb
+++ b/app/views/testimonies/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="text-center mt-4 mb-0">Conte seu final feliz</h2>
   <div class="devise-card mt-4 mb-5 mx-auto">
-    <%= simple_form_for [@user, @animal, @adoption, @testimony] do |f| %>
+    <%= simple_form_for [@adoption, @testimony] do |f| %>
       <%= f.input :content, as: :text, :input_html => { class: 'test', :cols => 4, :rows => 8 }, placeholder: 'Descreva sua história' %>
       <%= f.button :submit, "Enviar", class: "btn-yellow" %>
     <% end %>
@@ -9,4 +9,4 @@
 </div>
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
- <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
+ <%= link_to 'Voltar ao menu principal', dashboard_path, class: 'btn btn-primary' %>
