--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= simple_form_for @user , data: { controller: "tab" } do |f| %>
+  <%= simple_form_for @user , data: { controller: "tab" }, url: :update_user do |f| %>
     <div class="tab-content">
 
     <div class="tab-pane active" id="dados">
