coisas idiotas + views

--- a/app/views/adoption_forms/_form.html.erb
+++ b/app/views/adoption_forms/_form.html.erb
@@ -22,7 +22,7 @@
     <%= f.input :pergunta6, label: "Quantas pessoas morando na residência? "%>
     <%= f.input :pergunta7, label: "Ele ficará preso em algum cômodo?", collection: ['Sim', 'Não'] %>
     <%= f.input :pergunta8, label: "Você aceita manter contato com a gente e mandar fotos e vídeos constantemente?", collection: ['Sim', 'Não'] %>
-    <%= f.button :submit, "Concluir", class: "btn btn-primary" %>
+    <%= f.button :submit, "Concluir", class:"btn btn-dark-green" %>
   <% end %>
 
   </div>
