--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -40,7 +40,7 @@
             <p><i class="fa-solid fa-xmark"></i> Não castrada</p>
           <% end %></p>
       <p><strong><%= "História: " %></strong><%= "#{@adoption.animal.story}" %></p>
-      <p><strong><%= "Data da Entrevista: " %></strong> <%= "#{@adoption.date.strftime("%d/%m/%Y")}" %></p>
+      <p><strong><%= "Data da adoção: " %></strong> <%= "#{@adoption.date.strftime("%d/%m/%Y")}" %></p>
       <p><strong><%= "Status: " %></strong><%= "#{@adoption.status}" %></p>
 
       <% if current_user.adopter == false && @adoption.status == "Pendente" %>
