--- a/app/views/animals/_my_animals.html.erb
+++ b/app/views/animals/_my_animals.html.erb
@@ -5,7 +5,7 @@
       <% if current_user.id == animal.user.id && animal.present?%>
         <% if animal.present? %>
 
-          <div class="col-sm-3 mb-4">
+          <div class="col-sm-3 mb-3 mt-3">
             <div class="card-index mx-auto my-auto">
 
               <div class="position-relative">
