--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,6 @@
 <p>State: <%= @user.state %></p>
 <p>Phone: <%= @user.phone %></p>
 
-<%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %> |
+<% if current_user == @user %>
+  <%= link_to 'Editar', edit_user_path(@user), class:"btn btn-dark-green" %>
+<% end %>
