--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -59,5 +59,5 @@
 
 
   <!-- fazer botão para todos os 'matches' (index animals) -->
-  <%= link_to 'Voltar ao meu perfil', dashboard_path(@adoption), class: 'btn btn-primary my-2' %>
+  <%= link_to 'Voltar ao meu perfil', dashboard_path(@adoption), class:"btn btn-dark-green" %>
 </div>
